--- a/provis.html
+++ b/provis.html
@@ -35,7 +35,8 @@
         <input class="acid_sequence" type="text" id="/Users/terel.blackwell/Desktop/HackUMBC2024/nextpage.html" name="/Users/terel.blackwell/Desktop/HackUMBC2024/nextpage.html"><br>
         </div>
         <button onclick="goToNextPage()">Submit</button>
-       </form>
+       </form><br>
+       <img width=100%; src="3D_model.jpg" alt="First Protein 3D">
     </p>
 
 </body>
