--- a/provis.html
+++ b/provis.html
@@ -28,14 +28,12 @@
     </p>
     
     <p>
-        <!-- Display Text Box for Amino Acid Sequences -->
+        <!-- // Display Text Box for Amino Acid Sequences -->
         <form action="/action_page.php" target="_self">
-        <div class="aacid">
         <label for="aafile">Amino Acid Sequence:</label><br>
-        <input class="acid_sequence" type="text" id="/Users/terel.blackwell/Desktop/HackUMBC2024/nextpage.html" name="/Users/terel.blackwell/Desktop/HackUMBC2024/nextpage.html"><br>
-        </div>
-        <button onclick="goToNextPage()">Submit</button>
+        <input class="acid_sequence" type="text"><br>
        </form><br>
+        <button onclick="goToNextPage()">Submit</button>
        <img width=100%; src="3D_model.jpg" alt="First Protein 3D">
     </p>
 
